--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1"
-  }
+  "@testing-library/jest-dom": "^6.9.1",
+  "@babel/preset-env": "^7.26.0"
+}
 }
